fixed overflow issue for main window for different sizes

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,14 +2,17 @@
 
 html, body {
 	height: 100%;
+	width: 100%;
 }
 
 .ember-application > .ember-view {
 	height: 100%;
+	width: 100%;
 }
 
 #app-container {
 	height: 100%;
+	width: 100%;
 }
 
 #app-body {
@@ -21,13 +24,17 @@ html, body {
 }
 
 #main {
+	transition: width .5s;
+	padding: 1%;
+	overflow: auto;
 	height: 100%;
 }
+
 /****************** SIDEBAR NAVIGATION *********************/
 
 .sidenav {
 	height: 100%;
-	width: 0; 
+	/* width: 1%; 
 	/* position: fixed; */
 	z-index: 2;
 	/* top: 0;
@@ -56,11 +63,6 @@ html, body {
 	color: #f1f1f1;
 }
 
-#main {
-	transition: width .5s;
-	padding: 20px;
-}
-
 .notpushed {
 	width: 97.85%;
 }
@@ -78,6 +80,7 @@ html, body {
 	background-image: url("http://hdwallpaperbackgrounds.net/wp-content/uploads/2016/10/Free-Download-Bokeh-Backgrounds-5.jpg");
 	background-size: 100% 100%;
 	color: white;
+	overflow: hidden;
 }
 
 .profile {
@@ -112,16 +115,12 @@ html, body {
 	background-size: 100% 100%;
 }
 
-#main {
-	overflow: auto;
-}
-
 .summary {
 	width: 100%;
 }
 
 .summary-section {
-	background: rgba(250, 250, 250, 0.94);
+	background: rgba(250, 250, 250, 0.91);
 	border-radius: 25px;
 	margin-bottom: 3%;
 	padding: 0 1% 1% 1%;
@@ -195,8 +194,8 @@ html, body {
 }
 
 .project-image {
-	height: 100px;
-	width: 70%;
+	height: 50%;
+	width: 50%;
 	border-radius: 5px;
 }
 
